--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "chai": "^4.2.0",
     "chai-http": "^4.2.0",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "isemail": "^3.2.0",
     "jwt-simple": "^0.5.5",
