--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Project Client-side",
   "main": "index.js",
   "engines": {
-    "node":"10.x"
+    "node":"8.11.3"
   },
   "scripts": {
     "start": "node index.js",
